hphp/test/slow/inout/fb-intercept-bad-handler.php.expectf

Fatal error: fb_intercept2 used with an inout handler with a bad signature (expected parameter three to be inout) in %s/fb-intercept-bad-handler.php on line 5
